# Claude

./: .gitignore  breakout.py  index.html
.claude/: settings.local.json
Automation/: lego_price_checker.py  lego_titanic.py  lego_titanic_fast.py
Simulation/: simulation.py
Simulation/cpp/: CMakeLists.txt
Simulation/cpp/src/: simulation.cpp
breakout-cpp/: CMakeLists.txt
breakout-cpp/src/: Ball.cpp  Ball.h  Block.cpp  Block.h  Constants.h  Game.cpp  Game.h  Laser.cpp  Laser.h  Paddle.cpp  Paddle.h  Particle.cpp  Particle.h  Powerup.cpp  Powerup.h  main.cpp
breakout-game/: breakout_hs.json
breakout-game/breakout-cpp/src/: breakout.cpp  breakout.h  main.cpp
